--- a/3 Control Flow/3.3 Functions.md
+++ b/3 Control Flow/3.3 Functions.md
@@ -3,142 +3,31 @@ ___
 ## Contents
 - [Contents](#contents)
 - [Functions](#functions)
-  - [Functions Make Things Simple](#functions-make-things-simple)
   - [Pre-defined functions](#pre-defined-functions)
-  - [In-Built functions](#in-built-functions)
   - [User Defined Functions](#user-defined-functions)
 - [Variables](#variables)
-  - [Scope of a Variable](#scope-of-a-variable)
-  - [Global variables](#global-variables)
-- [Default Arguments](#default-arguments)
-  - [Collections and Functions](#collections-and-functions)
+  - [Default Arguments](#default-arguments)
+- [Collections and Functions](#collections-and-functions)
 - [Conditionals and Loops in Functions](#conditionals-and-loops-in-functions)
+- [String Comparison in Functions:](#string-comparison-in-functions)
 - [Function Exercises](#function-exercises)
 
 ___
 ## Functions
-A function is a reusable block of code which performs operations specified in the function. They allow tasks to be broken into smaller pieces and parts fo the code to be reused in different programs.
+A function is a reusable block of code which performs operations specified in the function. Functions allow tasks to be broken into smaller pieces and for the code to be reused in different programs.
 
+*[Code](/XXCode%20Snips/3.3.3%20Pascal's%20Fucking%20Triangle.py) for Pascal's Triangle utilising functions*
 
 There are two types of functions :
-
 * **Pre-defined functions** and  
 * **User defined functions**
 
 ___
-### Functions Make Things Simple
-Consider the two lines of code in **Block 1** and **Block 2**: the procedure for each block is identical. The only thing that is different is the variable names and values.
-
-**Block 1:**  
-```py
-# a and b calculation block1
-a1 = 4
-b1 = 5
-c1 = a1 + b1 + 2 * a1 * b1 - 1
-if(c1 < 0):
-    c1 = 0 
-else:
-    c1 = 5
-c1   
-```
-
-**Block 2:**  
-```py
-# a and b calculation block2
-a2 = 0
-b2 = 0
-c2 = a2 + b2 + 2 * a2 * b2 - 1
-if(c2 < 0):
-    c2 = 0 
-else:
-    c2 = 5
-c2   
-```
-
-We can replace the lines of code with a function. A function combines many instructions into a single line of code. Once a function is defined, it can be used repeatedly. You can invoke the same function many times in your program. You can save your function and use it in another program or use someone else’s function. The lines of code in code **Block 1** and code **Block 2** can be replaced by the following function:
-```py
-# Make a Function for the calculation above
-def Equation(a,b):
-    c = a + b + 2 * a * b - 1
-    if(c < 0):
-        c = 0 
-    else:
-        c = 5
-    return(c) 
-```
-
-This function takes two inputs, a and b, then applies several operations to return c.
-We simply define the function, replace the instructions with the function, and input the new values of `a1`, `b1` and `a2`, `b2` as inputs. The entire process is demonstrated in the figure:
-
-Code **Blocks 1** and **Block 2** can now be replaced with code **Block 3** and code **Block 4**.
-
-**Block 3:**  
-```py
-a1 = 4
-b1 = 5
-c1 = Equation(a1, b1)
-c1
-```
-
-**Block 4:**  
-```py
-a2 = 0
-b2 = 0
-c2 = Equation(a2, b2)
-c2
-```
-
-___
 ### Pre-defined functions
-There are many pre-defined functions in Python, so let's start with the simple ones.
+There are many pre-defined functions in Python, some common and well-known ones include the [`print()`](/1%20Python%20Basics/1.1%20Hello%20World.md#print-formatting), `sum()`, and `len()` functions.
+Some require importing such as [math or random](/XXCode%20Snips/3.3.1%20Modules%20and%20Libraries.py)
 
-The `print()` function:
-```py
-# Build-in function print()
-
-album_ratings = [10.0, 8.5, 9.5, 7.0, 7.0, 9.5, 9.0, 9.5] 
-print(album_ratings)
-```
-
-The `sum()` function adds all the  elements in a list or tuple:
-```py
-# Use sum() to add every element in a list or tuple together
-
-sum(album_ratings)
-```
-
-The `len()` function returns the length of a list or tuple:
-```py
-# Show the length of the list or tuple
-
-len(album_ratings)
-```
-
-### In-Built functions
 In Python, an in-built function is a pre-defined function that is always available for use, providing common functionality without requiring any imports. 
-
-You will see below will return an error as integer alone is not considered while using a function.It either has to be in the form of tuple, list or a set.
-
-```py
-sum(1,2)
-# Define a tuple
-a = (1, 2)
-
-# Pass the tuple to the sum function and store the result in a variable
-c = sum(a)
-
-# Print the result
-print(f"The sum of the elements in the tuple {a} is {c}.")
-
-# Define a list
-a = [1, 2]
-
-# Pass the list to the sum function and store the result in a variable
-c = sum(a)
-
-# Print the result
-print(f"The sum of the elements in the list {a} is {c}.")
-```
 
 ### User Defined Functions
 The basic structure of a user defined function is:
@@ -148,6 +37,8 @@ The basic structure of a user defined function is:
 * There is a body within every function that starts with a colon (`:`) and is indented.
 * Documentation can be placed before the body.
 * The statement `return` exits a function, optionally passing back a value.
+
+*[Code](/XXCode%20Snips/3.3.2%20Functions.py) for examples of user-created functions*
 
 Below is an example of a function that adds on to the parameter `a` prints and returns the output as `b`:
 ```py
@@ -163,238 +54,152 @@ def add(a):
 
 Help can be obtained about a function; this will call the documentation within the function.
 ```py
-# Get a help on add function
 help(add)
+```
+
+Will output:
+```
+Help on function add in module __main__:
+
+add(a)
+    add 1 to a
 ```
 
 Functions can be called
 ```py
-# Call the function add()
 add(1)
 ```
 
-If the fution is called with a new input, a different result is obtained.
+Will output:
+```
+1 if you add one 2
+```
+
+If the function is called with a new input, a different result is obtained.
 ```py
-# Call the function add()
 add(2)
+```
+
+Will output:
+```
+2 if you add one 3
 ```
 
 Functions can be used to call other functions. For example, a function can be created that multiplies two numbers, using the ouput `b` of the 'add' function. The numbers will be represented by the variables `a` and `b`:
 ```py
-# Define a function for multiple two numbers
+def add(a):
+    """
+    add 1 to a
+    """
+    b = a + 1
+    print(a, "if you add one", b)
+    return(b)
+
 def Mult(a, b):
     c = a * b
     return(c)
     print('This is not printed')
     
-result = Mult(12,2)
+result = Mult(2, add(1))
 print(result)
 ```
 
-Note how the function terminates at the `return`  statement, while passing back a value. This value can be further assigned to a different variable as desired.  
+Will output:
+```
+1 if you add one 2
+4
+```
+
+Note how the function terminates at the `return` statement, while passing back a value. This value can be further assigned to a different variable as desired.  
 
 The same function can be used for different data types. For example, two integers can be mutiplied
 ```py
-# Use mult() multiply two integers
 Mult(2, 3)
+```
+
+Will output:
+```
+6
 ```
 
 or two floats:
 ```py
-# Use mult() multiply two floats
 Mult(10.0, 3.14)
 ```
 
-Or a [string](/1%20Python%20Basics/1.4%20String%20Operations.md#concatenation) can be replicated by multiplying with an integer:
-We can even replicate a string by multiplying with an integer:
+Will output:
+```
+31.400000000000002
+```
+
+A [string](/1%20Python%20Basics/1.4%20String%20Operations.md#concatenation) can be replicated by multiplying with an integer:
 ```py
 # Use mult() multiply two different type values together
-Mult(2, "Michael Jackson ")
+Mult(2, "String")
 ```
+
+Will output:
+```
+StringString
+```
+
 ___
 ## Variables
 The input to a function is called a formal parameter.
 
-A variable that is declared inside a function is called a  local variable. The parameter only exists within the function (i.e. the point where the function starts and stops).
+The scope of a variable is the part of that program where that variable is accessible. A variable that is declared inside a function is called a  local variable. The parameter only exists within the function (i.e. the point where the function starts and stops).
 
-A variable that is declared outside a function definition is a global variable, and its value is accessible and modifiable throughout the program. We will discuss more about global variables at the end of the lab.
+A variable that is declared outside a function definition is a global variable, and its value is accessible and modifiable throughout the program.
+
+If a variable is defined twice, both within and outside a function, the local variable will take precedence within the function, but the global variable will be returned if referred to outside the function.
 ```py
-# Function Definition
 def square(a):   
-    # Local variable b
-    b = 1
+    b = 1 # Local variable b
     c = a * a + b
     print(a, "if you square + 1", c) 
     return(c)
-```
 
-We can call the function  with an input of **3**:
-```py
-# Initializes Global variable  
-x = 3
-# Makes function call and return function a y
-y = square(x)
+x = 3 # Initializes Global variable  
+y = square(x) # Makes function call and return function a y
 y
 ```
 
-We can call the function  with an input of **2** in a different manner:
-```py
-# Directly enter a number as parameter
-square(2)
+Will output:
+```
+3 if you square + 1 10
 ```
 
-If there is no `return` statement, the function returns `None`. The following two functions are equivalent:
-```py
-# Define functions, one with return value None and other without return value
-def MJ():
-    print('Michael Jackson')
-    
-def MJ1():
-    print('Michael Jackson')
-    return(None)
-    
-# See the output
-MJ()
-
-# See the output
-MJ1()
-```
-
-Printing the function after a call reveals a **None** is the default return statement:
-```py
-# See what functions returns are
-print(MJ())
-print(MJ1())
-```
-
-Create a function `con` that  concatenates two strings using the addition operation:
-```py
-# Define the function for combining strings
-def con(a, b):
-    return(a + b)
-
-# Test on the con() function
-con("This ", "is")
-```
+**Note:**  
+If there is no `return` statement, the function returns `None`. 
 
 ___
-### Scope of a Variable
-The scope of a variable is the part of that program where that variable is accessible. Variables that are declared outside of all function definitions, such as the `myFavouriteBand` variable in the code shown here, are accessible from anywhere within the program. As a result, such variables are said to have global scope, and are known as global variables. `myFavouriteBand` is a global variable, so it is accessible from within the `getBandRating` function, and we can use it to determine a band's rating. We can also use it outside of the function, such as when we pass it to the print function to display it:
+### Default Arguments
+Default arguments can be set for functions. In the example below, in the `isGoodRating()` function, a default thresh hold for a "good" rating is set to 4:
 ```py
-# Example of global variable
-
-myFavouriteBand = "AC/DC"
-
-def getBandRating(bandname):
-    if bandname == myFavouriteBand:
-        return 10.0
-    else:
-        return 0.0
-
-print("AC/DC's rating is:", getBandRating("AC/DC"))
-print("Deep Purple's rating is:",getBandRating("Deep Purple"))
-print("My favourite band is:", myFavouriteBand)
-```
-
-Take a look at this modified version of our code. Now the `myFavouriteBand` variable is defined within the `getBandRating` function. A variable that is defined within a function is said to be a local variable of that function. That means that it is only accessible from within the function in which it is defined. Our `getBandRating` function will still work, because `myFavouriteBand` is still defined within the function. However, we can no longer print `myFavouriteBand` outside our function, because it is a local variable of our `getBandRating` function; it is only defined within the `getBandRating` function:
-```py
-# Deleting the variable "myFavouriteBand" from the previous example to demonstrate an example of a local variable 
-
-del myFavouriteBand
-
-# Example of local variable
-
-def getBandRating(bandname):
-    myFavouriteBand = "AC/DC"
-    if bandname == myFavouriteBand:
-        return 10.0
-    else:
-        return 0.0
-
-print("AC/DC's rating is: ", getBandRating("AC/DC"))
-print("Deep Purple's rating is: ", getBandRating("Deep Purple"))
-print("My favourite band is", myFavouriteBand)
-```
-
-Finally, take a look at this example. We now have two `myFavouriteBand` variable definitions. The first one of these has a global scope, and the second of them is a local variable within the `getBandRating` function. Within the `getBandRating` function, the local variable takes precedence. **Deep Purple** will receive a rating of 10.0 when passed to the `getBandRating` function. However, outside of the `getBandRating` function, the `getBandRating`s local variable is not defined, so the `myFavouriteBand variable we print is the global variable, which has a value of **AC/DC**:
-```py
-# Example of global variable and local variable with the same name
-
-myFavouriteBand = "AC/DC"
-
-def getBandRating(bandname):
-    myFavouriteBand = "Deep Purple"
-    if bandname == myFavouriteBand:
-        return 10.0
-    else:
-        return 0.0
-
-print("AC/DC's rating is:",getBandRating("AC/DC"))
-print("Deep Purple's rating is: ",getBandRating("Deep Purple"))
-print("My favourite band is:",myFavouriteBand)
-```
-
-___
-### Global variables
-So far, we've been creating variables within functions, but we have not discussed variables outside the function. These are called global variables.  
-Let's try to see what `printer1` returns:
-```py
-# Example of global variable
-
-artist = "Michael Jackson"
-def printer1(artist):
-    internal_var1 = artist
-    print(artist, "is an artist")
-    
-printer1(artist)
-```
-
-try runningthe following code:
-```py
-printer1(internal_var1) 
-```
-
-*We got a Name Error:  `name 'internal_var'` is not defined. Why?*  
-It's because all the variables we create in the function is a **local variable**, meaning that the variable assignment does not persist outside the function.
-
-But there is a way to create **global variables** from within a function as follows:
-```py
-artist = "Michael Jackson"
-
-def printer(artist):
-    global internal_var 
-    internal_var= "Whitney Houston"
-    print(artist,"is an artist")
-
-printer(artist) 
-printer(internal_var)
-```
-
-___
-## Default Arguments
-You can set a default value for arguments in your function. For example, in the `isGoodRating()` function, what if we wanted to create a threshold for what we consider to be a good rating? Perhaps by default, we should have a default rating of 4:
-```py
-# Example for setting param with default value
-
 def isGoodRating(rating=4): 
     if(rating < 7):
-        print("this album sucks it's rating is",rating)
+        print("this album sucks its rating is",rating)
         
     else:
         print("this album is good its rating is",rating)
 
 # Test the value with default value and with input
-
 isGoodRating()
 isGoodRating(10)
 ```
 
+Will output:
+```
+this album sucks its rating is 4
+this album is good its rating is 10
+```
+
 ___
-### Collections and Functions
-When the number of arguments  are unknown for a function, They can all be packed into a tuple as shown:
+## Collections and Functions
+When the number of arguments are unknown for a function, They can all be packed into a tuple:
 ```py
-def printAll(*args): # All the arguments are 'packed' into args which can be treated like a tuple
-    print("No of arguments:", len(args)) 
+def printAll(*args): # All the arguments are 'packed' into args which is treated like a tuple
+    print("No. of arguments:", len(args)) 
     for argument in args:
         print(argument)
 #printAll with 3 arguments
@@ -403,13 +208,33 @@ printAll('Horsefeather','Adonis','Bone')
 printAll('Sidecar','Long Island','Mudslide','Carriage')
 ```
 
-Similarly, The arguments can also be packed into a dictionary as shown:
+Will output:
+```
+No. of arguments: 3
+Horsefeather
+Adonis
+Bone
+No. of arguments: 4
+Sidecar
+Long Island
+Mudslide
+Carriage
+```
+
+Similarly, The arguments can also be packed into a dictionary:
 ```py
 def printDictionary(**args):
     for key in args:
         print(key + " : " + args[key])
 
 printDictionary(Country='Canada',Province='Ontario',City='Toronto')
+```
+
+Will output:
+```
+Country : Canada
+Province : Ontario
+City : Toronto
 ```
 
 Functions can be incredibly powerful and versatile. They can accept (and return) data types, objects and even other functions as arguements. Consider the example below:
@@ -419,23 +244,22 @@ def addItems(list):
     list.append("Four")
 
 myList = ["One","Two"]
-
 addItems(myList)
+print(myList)
+```
 
-myList
+Will output:
+```
+['One', 'Two', 'Three', 'Four']
 ```
 
 Note how the changes made to the list are not limited to the functions scope. This occurs as it is the lists **reference** that is passed to the function - Any changes made are on the orignal instance of the list. Therefore, one should be cautious when passing mutable objects into functions.
 
-
 ___
 ## Conditionals and Loops in Functions
-The `return()` function is particularly useful if you have any `IF` statements in the function, when you want your output to be dependent on some condition:
+The `return()` function is particularly useful if you have any `if` statements in the function, when the output is to be dependent on some condition:
 ```py
-# Function example
-
-def type_of_album(artist, album, year_released):
-    
+def type_of_album(artist, album, year_released):   
     print(artist, album, year_released)
     if year_released > 1980:
         return "Modern"
@@ -446,105 +270,93 @@ x = type_of_album("Michael Jackson", "Thriller", 1980)
 print(x)
 ```
 
-We can use a loop in a function. For example, we can `print out each element in a list:
-```py
-# Print the list using for loop
+Will output:
+```
+Michael Jackson Thriller 1980
+Oldie
+```
 
+Loops can also be used in a function, for example to print out elements of a list.
+```py
 def PrintList(the_list):
     for element in the_list:
         print(element)
-# Implement the printlist function
 
 PrintList(['1', 1, 'the man', "abc"])
 ```
 
-String comparison in Functions:  
-The relational operators compare the Unicode values of the characters of the strings from the zeroth index till the end of the string. It then returns a boolean value according to the operator used.
-```py
-#Compare Two Strings Directly using in operator
-# add string
-string= "Michael Jackson is the best"
+Will output:
+```
+1
+1
+the man
+abc
+```
 
-# Define a funtion
+## String Comparison in Functions:  
+Relational operators compare the Unicode values of the characters of the strings from the zeroth index till the end of the string. It then returns a boolean value according to the operator used.
+```py
 def check_string(text):
-    
-# Use if else statement and 'in' operatore to compare the string
     if text in string:
         return 'String matched'
     else:
         return 'String not matched'
 
-check_string("Michael Jackson is the best")
+string= "Michael Jackson is the best"
+
+print(check_string("Michael Jackson is the best"))
 ```
 
-This program uses a user-defined function named `compareStrings()` to compare two strings. 
+Will output:
+```
+String matched
+```
 
-This function receives both strings as its argument and returns 1 if both strings are equal using `==` operator
+Below is an example of a user-defined function `compareStrings()` Which compares two strings. It receives both strings as its argument and returns 1 if both strings are equal using `==` the operator
 ```py
-#Compare two strings using == operator and function
 def compareStrings(x, y):
-# Use if else statement to compare x and y
     if x==y:
         return 1
     
-# Declare two different variables as string1 and string2 and pass string in it
 string1 = "Michael Jackson is the best"
 string2 = "Michael Jackson is the best"
 
-# Declare a variable to store result after comparing both the strings
 check = compareStrings(string1, string2)
 
-#Use if else statement to compare the string
 if check==1:
     print("\nString Matched")
 else:
     print("\nString not Matched")
 ```
 
-**Count the Frequency of Words Appearing in a String Using a Dictionary.**  
-Find the count of occurence of any word in our string using python. This is what we are going to do in this section, count the number of word in a given string and print it.
+Will output:
+```
+String Matched
+```
 
-Lets suppose we have a ‘string’ and the ‘word’ and we need to find the count of occurence of this word in our string using python. This is what we are going to do in this section, count the number of word in a given string and print it. 
-
-The first thing, we will do is define a function and and then create a list that will be empty initially.
-
-Next, we will add a code to convert the string to a list. Python string has a split() method. It takes a string and some separator to return a list.
-
-Now we will declare an empty dictionary.
-
-Next we will add code using for loop to iterate the words and value will will count the frequency of each words in the string and store them to the dictionary.
-
-Finally we will print the dictionary.
+Below is an example fo a user-defined function that will count the frequency of the worrds appearing in a string using a dictionary.Count the Frequency of Words Appearing in a String Using a Dictionary.
 ```py
-# Python Program to Count words in a String using Dictionary
 def freq(string):
-    
-    #step1: A list variable is declared and initialized to an empty list.
     words = []
-    
-    #step2: Break the string into list of words
     words = string.split() # or string.lower().split()
-    
-    #step3: Declare a dictionary
     Dict = {}
-    
-    #step4: Use for loop to iterate words and values to the dictionary
     for key in words:
         Dict[key] = words.count(key)
-        
-    #step5: Print the dictionary
     print("The Frequency of words is:",Dict)
     
-#step6: Call function and pass string in it
-freq("Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went \
-Everywhere that Mary went The lamb was sure to go")
+freq("Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went Everywhere that Mary went The lamb was sure to go")
+```
+
+Will output:
+```
+The Frequency of words is: {'Mary': 6, 'had': 2, 'a': 2, 'little': 3, 'lamb': 3, 'Little': 1, 'lamb,': 1, 'lamb.Its': 1, 'fleece': 1, 'was': 2, 'white': 1, 'as': 1, 'snow': 1, 'And': 1, 'everywhere': 1, 'that': 2, 'went': 3, 'went,': 1, 'Everywhere': 1, 'The': 1, 'sure': 1, 'to': 1, 'go': 1}
 ```
 
 ___
 ## Function Exercises
 
 **Exercise 1:**  
-Come up with a function that divides the first input by the second input.
+Create a function that divides the one input by a second input.
 
 <details><summary>Click here for the solution</summary>
 
@@ -562,57 +374,50 @@ def con(a, b):
     return(a + b)
 ```
 
-Can the `con` function we defined before be used to add two integers or strings?
+Can the `con` function be used to add two integers or strings?
 
 <details><summary>Click here for the solution</summary>
 
 ```py
-Yes, for example: 
+# Yes, for example: 
 con(2, 2)
 ```
 </details>
 
 ___
 **Exercise 3:**  
-
-Can the `con function we defined before be used to concatenate lists or tuples?
+Can the `con` function be used to concatenate lists or tuples?
 
 <details><summary>Click here for the solution</summary>
 
 ```python
-Yes, for example: 
+# Yes, for example: 
 con(['a', 1], ['b', 1])
 ```
 </details>
 
 ___
 **Exercise 4:**  
-Write a function code to find total count of word `little` in the given string: 
+Write a function to find total count of word `little` in the given string: 
 `"Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went Everywhere that Mary went The lamb was sure to go"`
 
 <details><summary>Click here for the solution</summary>
 
 ```python
-# Python Program to Count words in a String using Dictionary
 def freq(string,passedkey):
-
-    #step1: A list variable is declared and initialized to an empty list.
     words = []
-
-    #step2: Break the string into list of words
-    words = string.split() # or string.lower().split()
-
-    #step3: Declare a dictionary
+    words = string.split()
     Dict = {}
-
-    #step4: Use for loop to iterate words and values to the dictionary
     for key in words:
         if(key == passedkey):
             Dict[key] = words.count(key)   
-    #step5: Print the dictionary
     print("Total Count:",Dict)
 
-#step6: Call function and pass string in it
 freq("Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went Everywhere that Mary went The lamb was sure to go","little")  
+```
+
+Will output:
+```
+Total Count: {'little': 3}
 ```
 </details>
