--- a/1 Python Basics/1.3 Expressions and Variables.md
+++ b/1 Python Basics/1.3 Expressions and Variables.md
@@ -163,7 +163,7 @@ if number % 2 != 0: # Will return True if the number is odd
 </details><p></p>
 
 [Code](<../XXCode Snips/1.3.3 Even or Odd.py>)  
-*See [Loops *Needs update 3.2](/x3%20Python%20Programming%20Fundamentals/x3.2%20Loops.md) for loop information.*  
+*See [Loops *Needs update 3.2](/3%20Control%20Flow/3.2%20Loops.md) for loop information.*  
 
 ___
 ## Advanced Removal Methods in Python Collections
