Stufff and things

--- a/3 Control Flow/3.5 Exception Handling.md
+++ b/3 Control Flow/3.5 Exception Handling.md
@@ -1,31 +1,22 @@
-*[Back to index](..\readme.md)*
+*[Back to index](</readme.md>)*
+___
+## Contents
+- [Contents](#contents)
+- [Exception Handling](#exception-handling)
+  - [Examples](#examples)
+- [Exception Handling](#exception-handling-1)
+  - [Try Except](#try-except)
+  - [Try Except Specific](#try-except-specific)
+  - [Try Except Else and Finally](#try-except-else-and-finally)
+- [Loop Exercises](#loop-exercises)
+- [Exception Handling Exercises](#exception-handling-exercises)
+- [Exercise 2: Handling ValueError](#exercise-2-handling-valueerror)
+- [Exercise 3: Handling Generic Exceptions](#exercise-3-handling-generic-exceptions)
 
-# **Exception Handling**
-## Objectives
-
-After completing this lab you will be able to:
-
-* Understand exceptions    
-* Handle the exceptions
-
-
-## Table of Contents
-
-
-* What is an Exception?
-* Exception Handling
-
-
-----
-
-
-## What is an Exception?
+## Exception Handling
 
 
 In this section you will learn about what an exception is and see examples of them.
-
-
-### Definition
 
 
 An exception is an error that occurs during the execution of code. This error causes the code to raise an exception and if not prepared to handle it will halt the execution of the code.
@@ -128,7 +119,7 @@ except:
 # code that will still execute if there is an exception
 ```
 
-### Try Except Example
+*Try Except Example*
 
 
 In this example we are trying to divide a number given by the user, save the outcome in the variable <code>a</code>, and then we would like to print the result of the operation. When taking user input and dividing a number by it there are a couple of exceptions that can be raised. For example if we divide by zero. Try running the following block of code with <code>b</code> as a number. An exception will only be raised if <code>b</code> is zero.
@@ -213,7 +204,7 @@ except:
 # code that will execute if there is no exception or a one that we are handling
 ```
 
-### Try Except Specific Example
+*Try Except Specific Example*
 
 
 This is the same example as above, but now we will add differentiated messages depending on the exception, letting the user know what is wrong with the input.
@@ -287,13 +278,10 @@ finally:
 # code that will execute if there is no exception or a one that we are handling
 ```
 
-### Try Except Else and Finally Example
+*Try Except Else and Finally Example*
 
 
 You might have noticed that even if there is an error the value of <code>a</code> is always printed. Let's use the <code>else</code> and print the value of <code>a</code> only if there is no error.
-
-
-
 ```python
 a = 1
 
@@ -331,21 +319,77 @@ else:
 finally:
     print("Processing Complete")
 ```
+___
+## Loop Exercises
+**Exercise 1:**  
+Using a for loop print the multiplication table of 6:
 
-<center>
-    
-    
-# Practice Exercises 
+<details><summary>Click here for the solution</summary>
 
-</center>
+```py
+for i in range(1, 11):
+    print(f"6 x {i} = {6 * i}")
+```
 
+Will output:
+```
+6 x 1 = 6
+6 x 2 = 12 
+6 x 3 = 18 
+6 x 4 = 24 
+6 x 5 = 30 
+6 x 6 = 36 
+6 x 7 = 42 
+6 x 8 = 48 
+6 x 9 = 54 
+6 x 10 = 60
+```
+</details>
 
-## Exercise 1: Handling ZeroDivisionError
+___
+## Exception Handling Exercises
+**Exercise 1:**
+*Handling ZeroDivisionError*
 
+There are two numbers, one is to be divided by the other. Create a function called `safe_divide` which will accept two numbers; `numerator` and `denominator`, use the Python `input()` method to take the values.
 
-Imagine you have two numbers and want to determine what happens when you divide one number by the other. To do this, you need to create a Python function called `safe_divide.` You give this function two numbers, a `'numerator'` and a `'denominator'`. The 'numerator' is the number you want to divide, and the `'denominator'` is the number you want to divide by. Use the user input method of Python to take the values.
+The function should perform the divisionand return the result, but should return `None` rather than an error if dividing by zero is attempted. Rather is should print `Error: Cannot divide by Zero.`  
 
-The function should be able to do the division for you and give you the result. But here's the catch: if you try to divide by zero (which is not allowed in math), the function should be smart enough to catch that and tell you that it's not possible to divide by zero. Instead of showing an error, it should return None, which means 'nothing' or 'no value', and print `"Error: Cannot divide by Zero.`
+<details><summary>Click here for the solution</summary>
+
+```python
+import sys
+
+def safe_divide(n,d):
+    try:
+        print(f"{n}/{d} = {n/d}")
+    except ValueError:
+        print("Please enter a valid number: ")
+        sys.exit(1)
+    except ZeroDivisionError:
+        print("Error: Cannot divide by Zero!")
+        d = int(input("Please enter another number: "))
+        safe_divide(n,d)
+    except:
+        print("Something went wrong")
+        sys.exit(1)
+
+n = int(input("Please enter a numerator: "))
+d = int(input("Please enter a denominator: "))
+safe_divide(n,d)
+
+### Does not actually handle ValueError because n/d are cast to ints outide the function. To actually use the `sys.exit(1)` cast to ints before trying the division; or the better option, make a `get_valid_integer()` function.
+```
+
+Will output:
+```
+Please enter a numerator: 7
+Please enter a denominator: 0
+Error: Cannot divide by Zero!
+Please enter another number: 5s
+7/5 = 1.4
+```
+</details>
 
 
 
@@ -357,14 +401,14 @@ def safe_divide(n,d):
     except ValueError:
         n = int(input("Please enter a number for the numerator: "))
     except ZeroDivisionError:
-        d = input("The number you provided cant divide 1 because it is 0\nPlease enter a number other than 0: ")
+        d = input("The number you provided cant divide because it is 0\nPlease enter a number other than 0: ")
     except:
         print("Something went wrong")
     else:
         print(f"{n}/{d}={n/d}")
 
-n = int(input("Please enter a numerator: "))
-d = input("Please enter a denominator: ")
+n = (input("Please enter a numerator: "))
+d = (input("Please enter a denominator: "))
 safe_divde(n,d)
 ```
 
@@ -525,32 +569,3 @@ complex_calculation(user_input)
 ```
 
 </details>
-
-
-## Authors
-
-
-<a href="https://www.linkedin.com/in/joseph-s-50398b136/" target="_blank">Joseph Santarcangelo</a>
-
-
-## <h3 align="center"> © IBM Corporation 2023. All rights reserved. <h3/>
-
-<!-- ## Change Log
-
-|  Date (YYYY-MM-DD) |  Version | Changed By  |  Change Description |
-|---|---|---|---|
-| 2023-11-02 | 2.2 | Abhishek Gagneja | Updated instructions |
-| 2023-08-01 | 2.1   | Akansha Yadav | Added optional practice section |
-| 2020-09-02  | 2.0  | Simran | Template updates to the file|
-|   |   |   |   | --!>
-
-
-
-
-
-
-
-
-```python
-
-```
